feat: Integrar gRPC para el servicio de contabilidad y mejorar la inicialización del Plan de Cuentas